[gd_scene load_steps=20 format=2]

[ext_resource path="res://DeterminationSansWebRegular-369X.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Player Sprite.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Other/ButtonSmallHover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Other/ButtonSmallPress.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Other/ButtonSmallNormal.png" type="Texture" id=5]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Other/ReturnSmallNormal.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Other/ReturnSmallPress.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Other/ReturnSmallHover.png" type="Texture" id=9]
[ext_resource path="res://Audio/SFX/Buttonpress.wav" type="AudioStream" id=10]
[ext_resource path="res://Scene/Cursor.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Other/ButtonSmallDisable.png" type="Texture" id=12]
[ext_resource path="res://Audio/Music/LevelSelect8bit.mp3" type="AudioStream" id=13]
[ext_resource path="res://Sprites/Tilesets/1347872.webp" type="Texture" id=14]

[sub_resource type="DynamicFont" id=16]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=17]
resource_name = "ChangeScene"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "LoadScene"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

// Gonkee's fog shader for Godot 3 - full tutorial https://youtu.be/QEaTsz_0o44
// If you use this shader, I would prefer it if you gave credit to me and my channel

uniform vec3 color = vec3(0.9, 1.0, 1.0);
uniform int OCTAVES = 4;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(345, 5467)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * 20.0;

	vec2 motion = vec2( fbm(coord + vec2(TIME * -0.5, TIME * 0.5)) );

	float final = fbm(coord + motion);

	COLOR = vec4(color, final * 0.5);
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 15 )
shader_param/color = Vector3( 0.9, 1, 1 )
shader_param/OCTAVES = 4

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -592, -224 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.827451 )
self_modulate = Color( 0.52549, 0.545098, 0.560784, 0.894118 )
position = Vector2( 512, 304 )
scale = Vector2( 0.590741, 0.590741 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -212.0
margin_right = 192.0
margin_bottom = -146.0
custom_fonts/font = SubResource( 16 )
text = "Levels Select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl1" type="TextureButton" parent="."]
margin_left = 208.0
margin_top = 192.0
margin_right = 240.0
margin_bottom = 224.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="lvl1"]
anchor_left = 0.498
anchor_top = 0.667
anchor_right = 0.498
anchor_bottom = 0.667
margin_left = -7.936
margin_top = -21.344
margin_right = 45.064
margin_bottom = 44.656
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 16 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl2" type="TextureButton" parent="."]
margin_left = 336.0
margin_top = 192.0
margin_right = 368.0
margin_bottom = 224.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="lvl2"]
anchor_left = 0.498
anchor_top = 0.667
anchor_right = 0.498
anchor_bottom = 0.667
margin_left = -7.936
margin_top = -21.344
margin_right = 45.064
margin_bottom = 44.656
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 16 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl3" type="TextureButton" parent="."]
margin_left = 464.0
margin_top = 192.0
margin_right = 496.0
margin_bottom = 224.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="lvl3"]
anchor_left = 0.498
anchor_top = 0.667
anchor_right = 0.498
anchor_bottom = 0.667
margin_left = -7.936
margin_top = -21.344
margin_right = 45.064
margin_bottom = 44.656
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 16 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl4" type="TextureButton" parent="."]
margin_left = 592.0
margin_top = 192.0
margin_right = 624.0
margin_bottom = 224.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="lvl4"]
anchor_left = 0.498
anchor_top = 0.667
anchor_right = 0.498
anchor_bottom = 0.667
margin_left = -7.936
margin_top = -21.344
margin_right = 45.064
margin_bottom = 44.656
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 16 )
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl5" type="TextureButton" parent="."]
margin_left = 720.0
margin_top = 192.0
margin_right = 752.0
margin_bottom = 224.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="lvl5"]
anchor_left = 0.498
anchor_top = 0.667
anchor_right = 0.498
anchor_bottom = 0.667
margin_left = -7.936
margin_top = -21.344
margin_right = 45.064
margin_bottom = 44.656
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 16 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -236.0
margin_right = -416.0
margin_bottom = -204.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 520, 328 )
scale = Vector2( 10, 6.625 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChangeScene = SubResource( 17 )
anims/LoadScene = SubResource( 18 )

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -12.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="Cursor" parent="." instance=ExtResource( 11 )]

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.443137 )
material = SubResource( 19 )
position = Vector2( 496, 396 )
scale = Vector2( 19, 14.9375 )
texture = ExtResource( 2 )

[connection signal="pressed" from="lvl1" to="." method="_on_lvl1_pressed"]
[connection signal="pressed" from="lvl2" to="." method="_on_lvl2_pressed"]
[connection signal="pressed" from="lvl3" to="." method="_on_lvl3_pressed"]
[connection signal="pressed" from="lvl4" to="." method="_on_lvl4_pressed"]
[connection signal="pressed" from="lvl5" to="." method="_on_lvl5_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
